--- a/ACC/Views/Project/PartialViews/_AddProjectPartialView.cshtml
+++ b/ACC/Views/Project/PartialViews/_AddProjectPartialView.cshtml
@@ -88,18 +88,29 @@
 						<div class="col-md-5">
 							<label class="form-label">Project Location (click to select)</label>
 							<div id="map" style="height: 450px; width: 100%; border: 1px solid #ccc;"></div>
-							<input type="hidden" asp-for="Latitude" id="Latitude" />
-							<input type="hidden" asp-for="Longitude" id="Longitude" />
+
+							<div class="row mt-3">
+								<div class="col-md-6">
+									<label asp-for="Latitude" class="form-label">Latitude</label>
+									<input asp-for="Latitude" id="Latitude" class="form-control" readonly />
+									<span asp-validation-for="Latitude" class="text-danger"></span>
+								</div>
+								<div class="col-md-6">
+									<label asp-for="Longitude" class="form-label">Longitude</label>
+									<input asp-for="Longitude" id="Longitude" class="form-control" readonly />
+									<span asp-validation-for="Longitude" class="text-danger"></span>
+								</div>
+							</div>
+
 							<div class="mt-2 small text-muted">
 								Lat: <span id="lat-display"></span>, Lng: <span id="lng-display"></span>
 							</div>
 						</div>
-					</div>
 
-					<div class="modal-footer mt-4">
-						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-						<button type="submit" class="btn btn-primary">Create project</button>
-					</div>
+						<div class="modal-footer mt-4">
+							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+							<button type="submit" class="btn btn-primary">Create project</button>
+						</div>
 				</form>
 			</div>
 		</div>
