--- a/ACC/Views/_ViewImports.cshtml
+++ b/ACC/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ACC
 @using ACC.ViewModels
 @using ACC.ViewModels.ProjectVMs
+@using BusinessLogic.Repository.RepositoryInterfaces
 @using DataLayer.Models
 @using ACC.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
@@ -9,6 +10,7 @@
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserRoleService UserRoleService
+@inject IProjetcRepository projectRepo
 @inject IHttpContextAccessor HttpContextAccessor
 
 
