--- a/ACC/wwwroot/css/Company.css
+++ b/ACC/wwwroot/css/Company.css
@@ -1,5 +1,9 @@
-﻿body {
-}
+﻿/*html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}*/
 .action-btn {
     position: relative;
     display: inline-block;
