--- a/ACC/wwwroot/css/site.css
+++ b/ACC/wwwroot/css/site.css
@@ -1,9 +1,14 @@
-html {
+/*html {
     font-size: 14px;
     position: relative;
     min-height: 100%;
-}
-
+}*/
+/*html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}*/
 @media (min-width: 768px) {
     html {
         font-size: 16px;
