--- a/ACC/Views/Company/Index.cshtml
+++ b/ACC/Views/Company/Index.cshtml
@@ -62,10 +62,9 @@
         }
 
         .table-container {
-            flex: 1;
-            overflow-y: auto;
-            overflow-x: auto;
-            min-height: 500px;
+            min-height: 480px;
+            max-height: 480px; /* optional, to add scroll if too long */
+            overflow-y:  auto;
         }
     </style>
 
