--- a/ACC/Views/Shared/_Layout.cshtml
+++ b/ACC/Views/Shared/_Layout.cshtml
@@ -386,9 +386,9 @@
             <ul class="nav flex-column">
                 <li class="nav-item">
                     <a asp-controller="Home" asp-action="Index" class="nav-link text-dark">
-                 
-                            <i class="fa-solid fa-home me-3"></i>
-                            <span>Home</span>
+
+                        <i class="fa-solid fa-chart-line me-3"></i>
+                            <span>Dashboard</span>
                        
                     </a>
                 </li>
