--- a/ACC/Views/Member/Index.cshtml
+++ b/ACC/Views/Member/Index.cshtml
@@ -23,12 +23,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
 
 	<style>
-		html, body {
-			height: 100%;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-		}
+		
 
 		.container-fluid {
 			height: 100%;
@@ -37,10 +32,9 @@
 		}
 
 		.table-container {
-			flex: 1;
-			overflow-y: auto;
-			overflow-x: auto;
-			min-height: 0;
+			min-height: 480px;
+			max-height: 480px; 
+			overflow-y:  auto;
 		}
 
 		.action-menu {
